nanousd-properties.h


NANOUSD_API
nusd_result_t nusd_attribute_get_token(nusd_stage_t stage, char const* attribute_path, double time_code, char const** token);
NANOUSD_API
nusd_result_t nusd_attribute_get_token_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_token_array_iterator_t* token_array_iterator);
NANOUSD_API
nusd_result_t nusd_attribute_get_float(nusd_stage_t stage, char const* attribute_path, double time_code, float* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_float_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_float_array_t* float_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_float2(nusd_stage_t stage, char const* attribute_path, double time_code, float* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_float2_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_float2_array_t* float2_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_float3(nusd_stage_t stage, char const* attribute_path, double time_code, float* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_float3_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_float3_array_t* float3_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_float4(nusd_stage_t stage, char const* attribute_path, double time_code, float* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_float4_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_float4_array_t* float4_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_float(nusd_stage_t stage, char const* attribute_path, float value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float_array(nusd_stage_t stage, char const* attribute_path, float* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float2(nusd_stage_t stage, char const* attribute_path, float* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float2_array(nusd_stage_t stage, char const* attribute_path, float* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float3(nusd_stage_t stage, char const* attribute_path, float* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float3_array(nusd_stage_t stage, char const* attribute_path, float* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float4(nusd_stage_t stage, char const* attribute_path, float* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_float4_array(nusd_stage_t stage, char const* attribute_path, float* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_get_double(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_double_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_double_array_t* double_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_double2(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_double2_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_double2_array_t* double2_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_double3(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_double3_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_double3_array_t* double3_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_double4(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_double4_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_double4_array_t* double4_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_double(nusd_stage_t stage, char const* attribute_path, double value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double2(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double2_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double3(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);