libnanousd/nanousd-array.h

typedef struct nusd_float_array_s* nusd_float_array_t;
typedef struct nusd_float2_array_s* nusd_float2_array_t;
typedef struct nusd_float3_array_s* nusd_float3_array_t;
typedef struct nusd_float4_array_s* nusd_float4_array_t;
typedef struct nusd_double_array_s* nusd_double_array_t;
typedef struct nusd_double2_array_s* nusd_double2_array_t;
typedef struct nusd_double3_array_s* nusd_double3_array_t;
typedef struct nusd_double4_array_s* nusd_double4_array_t;